# encrypted_chat_system

./: Cargo.toml  README  README.md
app_dois/: Cargo.toml
app_dois/src/: main.rs
app_um/: Cargo.toml
app_um/src/: main.rs
shared_crypto/: Cargo.toml
shared_crypto/src/: base64.rs  lib.rs  models.rs  rsa.rs  sha256.rs
src/: main.rs
