# sistema_chat_criptografado/app_um/Cargo.toml

[package]
name = "app_um"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_crypto = { path = "../shared_crypto" }

# Para Webhooks (Servidor HTTP e Cliente)
actix-web = "4"
tokio = { version = "1", features = ["full"] } 
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Para serialização e desserialização de payloads
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Para UI/interação no console
inquire = "0.7" # Versão mais recente pode ter mudado, verifique crates.io
clearscreen = "2.0.1"

# num-bigint é necessário se você usar BigUint diretamente na lógica da app_um,
# além do que já é usado em shared_crypto.
num-bigint = { version = "0.4", features = ["serde"] }
