# sistema_chat_criptografado/app_um/Cargo.toml

[package]
name = "app_um"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_crypto = { path = "../shared_crypto" }
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7" #
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.7"
clearscreen = "2.0"