# sistema_chat_criptografado/shared_crypto/Cargo.toml

[package]
name = "shared_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependências para RSA, Base64, SHA256 e modelos de dados
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"

# Para serialização/desserialização de modelos de dados
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Se for usar JSON para os payloads de webhook

# Para std::io::Read em sha256.rs (já parte da std, mas para clareza)
# Não é necessário declarar std aqui.